--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "gulpFile.js",
   "dependencies": {
     "body-parser": "^1.15.0",
+    "browserify": "^14.5.0",
     "express": "^4.13.4",
     "gulp": "^3.9.1",
     "gulp-autowatch": "^1.0.2",
